Disable add habit form on the home page.

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -118,6 +118,10 @@ button {
     background:             $button_active_colour;
     text-decoration:        none;
 }
+.progress:disabled {
+    background:             $meh_button_colour;
+    cursor:                 inherit;
+}
 button.jeffd {
     background:             $links_active_colour;
     text-decoration:        underline;
